--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,12 +26,12 @@
       </li>
     </ul>
     <button class="col-2 col-md-4 navbar-toggler d-flex d-md-none fs-1 px-1 px-md-0 py-1 py-md-0" type="button"
-      (click)="alternarMenu()">
+      (click)="alternarCuenta()">
       <i class="fa fa-user-circle ms-auto"></i>
     </button>
   </div>
 </header>
-<div id="menu-movil" class="position-absolute top-0 w-100 h-100 d-flex" style="z-index: 10;"
+<div id="menu-movil" class="position-absolute w-100 h-100 d-flex" style="z-index: 10;"
   [ngClass]="{ 'active': menuAbierto }">
   <div style="background-color: #21174C;">
     <ul class="nav justify-content-center gap-3 flex-column opacity-100 p-3">
@@ -53,4 +53,27 @@
     </ul>
   </div>
   <div id="menu-bg" [ngClass]="{ 'active': menuAbierto }" class="w-100 bg-dark opacity-25" (click)="alternarMenu()"></div>
+</div>
+<div id="menu-account" class="position-absolute w-100 h-100 d-flex flex-row-reverse" style="z-index: 10;"
+  [ngClass]="{ 'active': cuentaAbierto }">
+  <div style="background-color: #21174C;">
+    <ul class="nav justify-content-center gap-3 flex-column opacity-100 p-3">
+      <li class="nav-item">
+        <a class="nav-link active fw-light" style="width: max-content; font-size: 1.1rem;"
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }">
+          <i class="fa-solid fa-home"></i> Inicio
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link fw-light" style="width: max-content; font-size: 1.1rem;"
+          routerLink="/series"
+          routerLinkActive="active">
+          <i class="fa-solid fa-tv"></i> Series
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div id="menu-bg" [ngClass]="{ 'active': menuAbierto }" class="w-100 bg-dark opacity-25" (click)="alternarCuenta()"></div>
 </div>
