--- a/src/app/detalles/detalles.component.css
+++ b/src/app/detalles/detalles.component.css
@@ -16,3 +16,12 @@
 .table-striped tbody tr:nth-child(odd) td {
   background-color: #191b38;
 }
+
+@media (max-width: 768px) {
+  .item { transition: all 0.2s ease-in-out; }
+  .item:hover { transform: scale(1.0); }
+  .item:hover .item-img { filter: brightness(1.0); }
+  .item-title { transform: translateY(0); transition: all 0.2s ease-in-out; }
+  .item:hover .item-title { transform: translateY(0); }
+  .item-img { filter: brightness(1.0); transition: all 0.2s ease-in-out; }
+}
