--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,4 @@
   <app-footer class="mt-auto"></app-footer>
 </div>
 
-<app-menu-flotante></app-menu-flotante>
+<!-- <app-menu-flotante></app-menu-flotante> -->
